Changes for EFRMG12 NVIC and otSysEventSignalPending

--- a/examples/platforms/efr32mg21/Makefile.am
+++ b/examples/platforms/efr32mg21/Makefile.am
@@ -45,6 +45,8 @@ EFR32MG_SDK_SRCDIR                            = $(top_srcdir)/third_party/silabs
 libopenthread_efr32mg21_a_CPPFLAGS                                            = \
     -D__START=main                                                              \
     -D__STARTUP_CLEAR_BSS                                                       \
+    -DEFR32_SERIES2_CONFIG1_MICRO                                               \
+    -DNVIC_CONFIG=\"platform/base/hal/micro/cortexm3/efm32/nvic-config.h\"      \
     -I$(top_srcdir)/include                                                     \
     -I$(top_srcdir)/examples/platforms                                          \
     -I$(top_srcdir)/examples/platforms/efr32mg21/$(EFR32_BOARD_DIR)             \
@@ -60,6 +62,8 @@ libopenthread_efr32mg21_a_CPPFLAGS                                            = 
     -I$(EFR32MG_SDK_SRCDIR)/platform/radio/rail_lib/plugin/pa-conversions       \
     -I$(EFR32MG_SDK_SRCDIR)/hardware/kit/common/bsp                             \
     -I$(EFR32MG_SDK_SRCDIR)/hardware/kit/EFR32MG21_$(BOARD)/config              \
+    -I$(EFR32MG_SDK_SRCDIR)/platform/base/hal/micro/cortexm3/efm32              \
+    -I$(EFR32MG_SDK_SRCDIR)/platform/base/hal/micro/cortexm3/efm32/config       \
     -I$(EFR32MG_SDK_SRCDIR)/platform/CMSIS/Include                              \
     -I$(EFR32MG_SDK_SRCDIR)/platform/Device/SiliconLabs/EFR32MG21/Include       \
     -I$(EFR32MG_SDK_SRCDIR)/platform/emdrv/common/inc                           \
