--- a/examples/Makefile-efr32mg21
+++ b/examples/Makefile-efr32mg21
@@ -98,6 +98,7 @@ COMMONCFLAGS                       := \
     -Os                               \
     -g                                \
     -I$(HAL_CONF_DIR)                 \
+    -D__START=main                    \
     -D$(MCU)                          \
     $(EFR32MG21_CONFIG_FILE_CPPFLAGS) \
     $(NULL)
