--- a/examples/platforms/efr32mg21/sleepy-demo/sleepy-demo-ftd/Makefile.am
+++ b/examples/platforms/efr32mg21/sleepy-demo/sleepy-demo-ftd/Makefile.am
@@ -33,7 +33,7 @@ override CFLAGS                              := $(filter-out -Wconversion,$(CFLA
 override CXXFLAGS                            := $(filter-out -Wconversion,$(CXXFLAGS))
 
 EFR32_BOARD_DIR                               = $(shell echo $(BOARD) | tr A-Z a-z)
-EFR32MG_SDK_SRCDIR                            = $(top_srcdir)/third_party/silabs/gecko_sdk_suite/v2.6
+EFR32MG_SDK_SRCDIR                            = $(top_srcdir)/third_party/silabs/gecko_sdk_suite/$(SDKVERSION)
 
 $(top_builddir)/examples/platforms/efr32mg21/libopenthread-efr32mg21.a:
 	(cd $(top_builddir)/examples/platforms/efr32mg21/ && $(MAKE) $(AM_MAKEFLAGS) libopenthread-efr32mg21.a )
@@ -45,7 +45,7 @@ CPPFLAGS_COMMON                                                       += \
     -I$(top_srcdir)/include                                              \
     -I$(top_srcdir)/src/core                                             \
     -I$(top_srcdir)/examples/platforms                                   \
-    -DPLATFORM_HEADER=\"@top_builddir@/third_party/silabs/gecko_sdk_suite/v2.6/platform/base/hal/micro/cortexm3/compiler/gcc.h\" \
+    -DPLATFORM_HEADER=\"platform/base/hal/micro/cortexm3/compiler/gcc.h\" \
     -Wno-sign-compare                                                           \
     -DCORTEXM3                                                                  \
     -D__START=main                                                              \
@@ -78,12 +78,14 @@ CPPFLAGS_COMMON                                                       += \
     -I$(EFR32MG_SDK_SRCDIR)/platform/emdrv/ustimer/inc                          \
     -I$(EFR32MG_SDK_SRCDIR)/platform/emdrv/dmadrv/inc                           \
     -I$(EFR32MG_SDK_SRCDIR)/platform/emdrv/dmadrv/config                        \
-    -I$(EFR32MG_SDK_SRCDIR)/platform/emdrv/rtcdrv/inc                           \
     -I$(EFR32MG_SDK_SRCDIR)/platform/emlib/inc                                  \
     -I$(EFR32MG_SDK_SRCDIR)/platform/halconfig/inc/hal-config                   \
     -I$(EFR32MG_SDK_SRCDIR)/util/plugin/plugin-common/fem-control               \
     -I$(EFR32MG_SDK_SRCDIR)/platform/base/hal/micro/cortexm3/efm32/config       \
     -I$(EFR32MG_SDK_SRCDIR)/platform/base/hal/plugin                            \
+    -I$(EFR32MG_SDK_SRCDIR)/platform/common/inc                                 \
+    -I$(EFR32MG_SDK_SRCDIR)/platform/service/sleeptimer/inc                     \
+    -I$(EFR32MG_SDK_SRCDIR)/platform/service/sleeptimer/config                  \
     -I$(EFR32MG_SDK_SRCDIR)/protocol/thread                                     \
     -I$(EFR32MG_SDK_SRCDIR)/platform/base/hal/micro/cortexm3/efm32              \
     -I$(EFR32MG_SDK_SRCDIR)/protocol/thread/stack                               \
