--- a/examples/platforms/efr32xx/efr32mg21/Makefile.am
+++ b/examples/platforms/efr32xx/efr32mg21/Makefile.am
@@ -53,6 +53,7 @@ libopenthread_efr32mg21_a_CPPFLAGS                                            = 
     -Wno-sign-compare                                                           \
     -I$(top_srcdir)/examples/platforms                                          \
     -I$(top_srcdir)/examples/platforms/efr32xx/efr32mg21/$(EFR32_BOARD_DIR)     \
+    -I$(top_srcdir)/examples/platforms/efr32xx/src                              \
     -I$(top_srcdir)/include                                                     \
     -I$(top_srcdir)/src/core                                                    \
     -I$(top_srcdir)/third_party/silabs/rail_config                              \
